[package]
name = "temperature_catcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
uuid = "1.1.2"